--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pgprojectx/react-scripts",
-  "version": "2.1.3",
+  "version": "2.1.3-alchemy",
   "description": "Configuration and scripts for Create React App.",
   "repository": "facebook/create-react-app",
   "license": "MIT",
@@ -13,6 +13,7 @@
   "files": [
     "bin",
     "config",
+    "deploy",
     "lib",
     "scripts",
     "template",
